fix: padding&gap for help

--- a/shelter/pages/main/style.scss
+++ b/shelter/pages/main/style.scss
@@ -483,8 +483,8 @@ body {
 .help-wrapper {
   @extend %flex-col-sb;
   align-items: center;
-  gap: 60px;
-  padding: 80px 0 100px 0;
+  gap: 58px;
+  padding: 80px 0 99px 0;
 }
 .help__title {
   font-size: $fz-section-title;
